# advent-of-code-2020

./: Cargo.toml  LICENSE  README.md
rust/: Cargo.toml  README.md  run.sh
rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  lib.rs
rust/template/: day.rs  mkday.sh
