[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Björn Westlin <bwestlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.1"
time = "0.1"
rayon = "*"
md5 = "*"
num_cpus = "*"

[features]
default = []
print = []
timeit = []

[lib]
name = "utils"
path = "src/lib.rs"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"
